[package]
name = "rysk-web"
version = "0.0.0"
description = "Web interface to a Rysk powered RISC-V virtual machine."
edition = "2021"
license = "MIT"
repository = "https://github.com/AidoP/rysk-web/"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rysk = { git = "https://github.com/AidoP/rysk" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.87"
